--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,17 +15,17 @@
         android:theme="@style/Theme.NewProject"
         tools:targetApi="31">
         <!-- Vocab List Activity -->
-        <activity android:name=".VocabListActivity"
-            android:exported="true" />
         <activity
-            android:name=".MainActivity"
+            android:name=".VocabListActivity"
+            android:exported="true" />
+        <activity android:name=".ChooseLanguage"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
